GSWV-502, GSWV-503, Council logo not placed properly, add 15px on the left and right, space above and below milestones inconsistent. it should be the smaller space above and below. The meeting titles are not clearly links. Lets change the color of the meeting titles to the standard link green. Meeting title should be aligned vertically to the middle of the green box. it’s currently too low. Icons not always properly aligned with text. See “Add Agenda Item” and “+” icon at the bottom of the page. In small view, the meeting title and drag/drop instructions are too close to the edge of the screen. With the gray/white stripes to delineate separate meetings, start with gray for the first meeting. Button style is incorrect. Always All Caps on buttons. These are all done. Also I fixed the Add agenda popup for the FF

--- a/vtk/app/src/main/content/jcr_root/etc/designs/girlscouts-vtk/clientlibs/css/vtk-style.scss
+++ b/vtk/app/src/main/content/jcr_root/etc/designs/girlscouts-vtk/clientlibs/css/vtk-style.scss
@@ -16,6 +16,12 @@
     font-size:14px;
     line-height:1.5;
   }
+  #header {
+    >.columns {
+      padding-right:0.9375em;
+      padding-left:0.9375em;
+    }
+  }
   #main {
     background: transparent;
     .row {
@@ -106,11 +112,13 @@
       }
       ul {
         margin: 0;
+        li {
+          margin-bottom: 20px;
+          border:none;
+        }
         .meeting {
-         margin-bottom: 2.0833333%;
-         border:none;
           > div {
-            height: 80px;
+            height: 83px;
             background-color:#f6f6f6;
             cursor: move;
             padding-left:0;
@@ -140,7 +148,7 @@
               padding: 5px 0 0 4px;
               color: #fff;
               position: absolute;
-              height: 80px;
+              height: 83px;
               width: 80px;
               left:0;
               .date {
@@ -235,7 +243,6 @@
           pointer-events: none;
           > div {
             background: #f7941d;
-            margin: 20px auto;
             color: #fff;
             font-weight: 700;
             font-size: 14px;
@@ -327,6 +334,7 @@
       }
       p {
         font-weight: 100;
+        padding-bottom: 10px;
         span {
           margin-right:10px
         }
@@ -341,10 +349,12 @@
           border-left:solid 1px #fff;
           border-right:solid 1px #fff;
           text-align: center;
-          padding:10px 0 0 0;
+          padding:0;
           width:80%;
+          min-height: 70px;
           h3 {
-            margin-bottom: 5px;
+            margin: 0;
+            padding-top: 15px;
           }
         }
       }
@@ -1031,6 +1041,7 @@
     }
     .button {
       margin-bottom: 0;
+      text-transform: uppercase;
     }
     #frmCalElem {
       margin-bottom:0;
@@ -1464,7 +1475,7 @@
     }
   }
 }
-//soratable lists
+//jquery UI styles overwrite
 .ui-state-default, 
 .ui-widget-content .ui-state-default, 
 .ui-widget-header .ui-state-default {
@@ -1476,8 +1487,15 @@
   background-image: none;
 }
 
-.ui-widget-content .tabs-content a {
-  color:#00ae58;
+.ui-widget-content .tabs-content,
+.ui-state-default  {
+  a {
+    color:#00ae58;
+    &:link,
+    &:visited {
+      color:#00ae58;
+    }
+  } 
 }
 .ui-widget,
 .ui-widget .ui-widget {
@@ -1516,6 +1534,9 @@ input[type="file"] {
       cursor: move;
       z-index: 100;
       display: block !important;
+      height:83px;
+      background: #fff;
+      padding-right: 6px;
     }
     .bg-square {
       left:30px;
@@ -1524,12 +1545,17 @@ input[type="file"] {
       }
     }
     &:before {
-      content: none;
+      background: #fff;
+      left:0;
     }
     > div:nth-of-type(2) {
         padding-left: 115px;
     }
   } 
+  .vtk-body #main #yearPlanMeetings > .row > div.column {
+    padding-left:5px;
+    padding-right:5px;
+  }
   .vtk-body .accordion > dt h3 {
     width:100%;
     display: block;
@@ -1555,10 +1581,6 @@ input[type="file"] {
   .vtk-body #main .meeting-detail .meeting-navigation .direction:before {
     border-width:20px;
   }
-  table, thead, tbody, th, td, tr { 
-    display: block;
-    width: 100%; 
-  }
   .modalWrap {
     width: 100% !important;
     max-width: 100% !important;
@@ -1581,6 +1603,18 @@ input[type="file"] {
         }
       }
     }
+  }
+}
+table { 
+  width: 100%; 
+}
+table tr {
+  background: #fff;
+  &:nth-of-type(odd) {
+    background: #f9f9f9;
+  }
+  &:nth-of-type(even) {
+    background: #fff;
   }
 }
 //medium screen 
